<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="@dimen/dialog_width_lg"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="@dimen/space_xl">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_xl"
            android:fontFamily="@font/league_spartan_bold"
            android:gravity="center"
            android:text="@string/dialog_title_time_out"
            android:textColor="#37474F"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_2xl"
            android:fontFamily="@font/league_spartan_medium"
            android:gravity="center"
            android:text="@string/dialog_message_time_out_confirm"
            android:textColor="@color/medium_gray"
            android:textSize="@dimen/text_md" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_yes"
                android:layout_width="@dimen/dialog_button_width_sm"
                android:layout_height="@dimen/button_min_height"
                android:layout_marginEnd="@dimen/space_sm"
                android:backgroundTint="#3538CD"
                android:fontFamily="@font/league_spartan_bold"
                android:text="@string/button_yes"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/button_corner_radius" />

        <Button
                android:id="@+id/btn_no"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="@dimen/dialog_button_width_sm"
                android:layout_height="@dimen/button_min_height"
                android:fontFamily="@font/league_spartan_bold"
                android:text="@string/button_no"
                android:textColor="#3538CD"
                app:cornerRadius="@dimen/button_corner_radius"
                app:strokeColor="#3538CD" />
    </LinearLayout>
</LinearLayout>